Feat: added responsivity to section 2

--- a/views/home.html
+++ b/views/home.html
@@ -62,7 +62,7 @@
 	</section>
 
 	<!-- Section 02 -->
-	<!-- <section class="section" id="essence">
+	<section class="section" id="essence">
 		<div class="section-02-content-wrapper">
 
 			<div class="section-02-title-container">
@@ -71,6 +71,11 @@
 
 			<div class="section-02-detail-container">
 				<div class="section-02-card-container">
+
+					<div class="section-02-card">
+						<img src="../images/partners.jpg" alt="Natasha e Hugo">
+					</div>
+
 					<div class="section-02-card">
 						<h3>Natasha M. Yamamoto</h3>
 						<img src="../images/character_Natasha.jpg" alt="Natasha Michiko">
@@ -89,7 +94,7 @@
 			</div>
 
 		</div>
-	</section> -->
+	</section>
 
 	<script src="/js/app.js"></script>
 </body>
