--- a/css/section.2.style.css
+++ b/css/section.2.style.css
@@ -35,7 +35,7 @@
 {
     font-family: 'Libra-Serif-Modern';
     font-weight: 200;
-    font-size: 1.6rem;
+    font-size: 1.2rem;
 
     color: var(--section-02-title-color);
     text-align: center;
@@ -45,7 +45,7 @@
 .section-02-detail-container
 {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 
     height: 100%;
     width: 100%;
@@ -58,7 +58,7 @@
     justify-content: center;
 
     height: 100%;
-    width: 80%;
+    width: 100%;
 }
 
 .section-02-card 
@@ -70,6 +70,12 @@
     margin: 10px;
 }
 
+.section-02-card:nth-child(2), .section-02-card:nth-child(3)
+{
+    display: none;
+}
+
+
 .section-02-card h3
 {   
     margin: 10px 0px 0px 10px;
@@ -77,7 +83,7 @@
     font-family: 'Libra-Serif-Modern';
     font-weight: 200;
     font-style: italic;
-    font-size: 1.5rem;
+    font-size: 1rem;
     
     color: var(--section-02-character-name-color);
     letter-spacing: 2px;
@@ -87,19 +93,14 @@
 
 .section-02-card img 
 {
-    height: 400px;
-    width: 300px;
+    height: 130px;
+    width: 130px;
     margin: 10px;
 }
 
-.section-02-card img:nth-child(1)
+.section-02-card:nth-child(1) img
 {
-    box-shadow: 15px 15px 0px 0px #4e6982;
-}
-
-.section-02-card img:nth-child(2)
-{
-    box-shadow: 15px 15px 0px 0px #ffd171;
+    box-shadow: -10px -10px 0px 0px #ffd171, 10px 10px 0px 0px #4e6982;
 }
 
 .section-02-text-box
@@ -120,13 +121,14 @@
 
 .section-02-text-box h3 
 {
-    width: 90%;
-    margin-bottom: 15px;
+    width: 100%;
+    padding: 0px 10px;
+    margin-bottom: 5px;
 
     font-family: 'Libra-Serif-Modern';
     font-weight: 300;
     font-style: italic;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 
     color: var(--section-02-text-title-color);
     letter-spacing: 3px;
@@ -134,15 +136,166 @@
 
 .section-02-text-box p
 {
-    width: 90%;
+    width: 100%;
+    padding: 0px 10px;
 
     font-family: 'Montserrat';
     font-weight: 400;
-    font-size: 1.3rem;
+    font-size: 0.9rem;
 
     color: var(--section-02-text-color);
 
-    letter-spacing: 1px;
-    word-spacing: 4px;
-    line-height: 35px;
+    line-height: 18px;
+}
+
+@media (min-width: 640px) 
+{
+    .section-02-title-container h2
+    {
+        font-size: 1.3rem;  
+    }
+
+    .section-02-card img 
+    {
+        height: 180px;
+        width: 180px;
+    }
+
+    .section-02-text-box h3 
+    {
+        font-size: 1.3rem;
+    }
+    
+    .section-02-text-box p
+    {
+        font-size: 1rem;
+        letter-spacing: 1px;
+        line-height: 20px;
+    }
+}
+
+/* Responsive design for screens equal or larger than 768px */
+@media (min-width: 768px) 
+{
+    .section-02-title-container h2
+    {
+        font-size: 1.4rem;  
+    }
+
+    .section-02-card img 
+    {
+        height: 220px;
+        width: 220px;
+    }
+
+    .section-02-text-box h3 
+    {
+        font-size: 1.4rem;
+    }
+    
+    .section-02-text-box p
+    {
+        font-size: 1.1rem;
+    }
+
+}
+
+/* Responsive design for screens equal or larger than 1024px */
+@media (min-width: 1024px) 
+{
+    .section-02-title-container h2
+    {
+        font-size: 1.5rem;  
+    }
+
+    .section-02-detail-container
+    {
+        flex-direction: row;
+    }
+
+    .section-02-card-container
+    {
+        width: 80%;
+    }
+
+    .section-02-card:nth-child(1)
+    {
+        display: none;
+    }
+
+    .section-02-card:nth-child(2), .section-02-card:nth-child(3)
+    {
+        display: inline;
+    }
+
+    .section-02-card img 
+    {
+        height: 275px;
+        width: 225px;
+    }
+        
+    .section-02-card:nth-child(2) img
+    {
+        box-shadow: 15px 15px 0px 0px #ffd171;
+    }
+
+    .section-02-card:nth-child(3) img
+    {
+        box-shadow: 15px 15px 0px 0px #4e6982;
+    }
+
+    .section-02-text-box h3 
+    {
+        width: 90%;
+        padding: 0px 0px 0px 15px;
+        margin-bottom: 10px;
+        font-size: 1.5rem;
+        letter-spacing: 3px;
+    }
+    
+    .section-02-text-box p
+    {
+        width: 90%;
+        padding: 0px 0px 0px 15px;
+        font-size: 1.2rem;
+        letter-spacing: 1px;
+        word-spacing: 2px;
+    }
+
+}
+
+/* Responsive design for screens equal or larger than 1536px */
+@media (min-width: 1536px) 
+{
+    .section-02-title-container h2
+    {
+        font-size: 1.6rem;  
+    }
+    
+    .section-02-card h3
+    {   
+        font-size: 1.4rem;
+    }
+    
+
+    .section-02-card img 
+    {
+        height: 400px;
+        width: 300px;
+    }
+
+    .section-02-text-box h3 
+    {
+        padding: 0px;
+        margin-bottom: 15px;
+        font-size: 1.6rem;
+    }
+    
+    .section-02-text-box p
+    {
+        padding: 0px;
+        font-size: 1.3rem;
+        word-spacing: 4px;
+        line-height: 35px;
+    }
 }
