--- a/views/home.html
+++ b/views/home.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="/css/navigation.style.css">
 	<link rel="stylesheet" href="/css/section.1.style.css">
 	<link rel="stylesheet" href="/css/section.2.style.css">
+	<link rel="stylesheet" href="/css/section.3.style.css">
 </head>
 
 <body>
@@ -93,6 +94,47 @@
 				</div>
 			</div>
 
+		</div>
+	</section>
+
+	<!-- Section 03 -->
+	<section class="section">
+		<div class="section-03-content-wrapper">
+
+			<div class="section-03-bamboo">
+				<img src="/images/outros/bambu_1.png" alt="bambu">
+			</div>
+
+			<div class="section-03-text-box">
+				<h2 class="section-03-text-box-title">Nossos valores...</h2>
+				<div class="section-03-text-box-item">
+					<h3>Empatia, cuidado e consideração - <span>omoiyari.</span></h3>
+					<p>Cuidar do presente, das pessoas e de sí mesmo, preservar a vida, criar conexões, valorizar as origens e respeitar as futuras gerações.</p>
+				</div>
+				<div class="section-03-text-box-item">
+					<h3>Emendar com ouro - <span>kintsugi.</span></h3>
+					<p>Errar é humano. Nossa missão é ressignificar o erro em aprendizado, permitindo a evolução contínua como pessoas e profissionais.</p>
+				</div>
+				<div class="section-03-text-box-item">
+					<h3>Gratidão - <span>kansha.</span></h3>
+					<p>Pelas pessoas, pelas oportunidades, pelo trabalho, pela natureza e pela vida.</p>
+				</div>
+				<div class="section-03-text-box-item">
+					<h3>Faça o melhor que puder e nunca desista - <span>ganbatte.</span></h3>
+					<p>Seja como o bambu, flexível, e sustente-se nas suas raízes nos momentos de adversidade, e assim como o bambu nas estações chuvosas, cresça (progrida e evolua) em direção ao céu.</p>
+				</div>
+			</div>
+
+			<div class="section-03-kanjis">
+				<div class="section-03-kanji-column">
+					<img src="../images/outros/omoiyari.png" alt="omoiyari">
+					<img src="../images/outros/kansha.png" alt="kansha">
+				</div>
+				<div class="section-03-kanji-column">
+					<img src="../images/outros/kintsugi.png" alt="kintsugi">
+					<img src="../images/outros/ganbatte.png" alt="ganbatte">
+				</div>
+			</div>
 		</div>
 	</section>
 
