--- a/views/qrPage.html
+++ b/views/qrPage.html
@@ -26,7 +26,7 @@
 
 		<ul class="navigation-container">
 			<li class="navigation-button first-button">
-				<a class="navigation-link" href="/">Quem somos</a>
+				<a class="navigation-link" href="./home.html">Quem somos</a>
 			</li>
 			<li class="navigation-button second-button">
 				<a class="navigation-link" href="https://docs.google.com/forms/d/1eecKKFgnL-C_a-i_kjW8wiDuyLyh4F4YOddRrZkDatc/edit">Quero meu projeto</a>
