--- a/views/home.html
+++ b/views/home.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="/css/section.1.style.css">
 	<link rel="stylesheet" href="/css/section.2.style.css">
 	<link rel="stylesheet" href="/css/section.3.style.css">
+	<link rel="stylesheet" href="/css/section.4.style.css">
 </head>
 
 <body>
@@ -30,7 +31,7 @@
 					<a href="#essence" class="navbar-menu-link">Nossa essência</a>
 				</li>
 				<li class="navbar-menu-item">
-					<a href="#section-02" class="navbar-menu-link">Serviços</a>
+					<a href="#services" class="navbar-menu-link">Serviços</a>
 				</li>			
 				<li class="navbar-menu-item">
 					<a href="#section-03"  class="navbar-menu-link">Projetos</a>
@@ -135,6 +136,41 @@
 					<img src="../images/outros/ganbatte.png" alt="ganbatte">
 				</div>
 			</div>
+		</div>
+	</section>
+
+	<!-- Section 04 -->
+	<section class="section" id="services">
+		<div class="section-04-content-wrapper">
+
+			<div class="section-04-text-box">
+				<h2>Nossos serviços...</h2>
+				<p>Todos nossos serviços procuram se alinhar com a sua real necessidade de projeto, unindo funcionalidade + estética e claro,<span> você</span>, a chave principal do projeto!</p>
+			</div>
+
+			<div class="section-04-note-container">
+				<div class="section-04-note-item">
+					<div></div>
+					<h3>Reviva Ambientes!</h3>
+					<p>Revitalizar o espaço sem quebra-quebra entregando um ambiente novo e aconchegante.</p>
+				</div>
+				<div class="section-04-note-item">
+					<div></div>
+					<h3>Reforma</h3>
+					<p>Reforma de tudo que for necessário e o que o ambiente permitir.</p>
+				</div>
+				<div class="section-04-note-item">
+					<div></div>
+					<h3>Prelúdio</h3>
+					<p>Apartamento na planta ou em construção. Decoração com liberdade e economia!</p>
+				</div>
+				<div class="section-04-note-item">
+					<div></div>
+					<h3>Consultoria</h3>
+					<p>Recomendações rápidas e práticas, aproveitando o que já existe.</p>
+				</div>
+			</div>
+
 		</div>
 	</section>
 
