--- a/css/section.4.style.css
+++ b/css/section.4.style.css
@@ -29,7 +29,7 @@
     flex-direction: column;
     justify-content: center;
     height: 30%;
-    width: 80%;
+    width: 100%;
     padding: 20px;
     color: var(--section-04-title-color);
 }
@@ -41,20 +41,20 @@
     font-family: 'Libra-Serif-Modern';
     font-style: italic;
     font-weight: 300;
-    font-size: 1.8rem;
-    letter-spacing: 2px;
-    word-spacing: 4px;
+    font-size: 1.1rem;
+    letter-spacing: 1px;
+    word-spacing: 2px;
 }
 
 .section-04-text-box p
 {
-    width: 75%;
+    width: 100%;
 
     font-family: 'Montserrat';
     font-weight: 400;
-    font-size: 1.3rem;
-    letter-spacing: 2px;
-    word-spacing: 4px;
+    font-size: 0.8rem;
+    letter-spacing: 1px;
+    word-spacing: 2px;
 }
 
 .section-04-text-box p span
@@ -68,25 +68,25 @@
 .section-04-note-container
 {
     display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content: space-evenly;
 
     height: 70%;
-    width: 80%;
+    width: 100%;
+
+    overflow-x: auto;
 }
 
 .section-04-note-item
 {
     display: flex;
+    flex-shrink: 0;
     flex-direction: column;
     align-items: center;
     position: relative;
 
-    height: 330px;
-    width: 330px;
-    padding: 40px 20px;
-    margin: 20px 0px;
+    height: 240px;
+    width: 240px;
+    padding: 20px 10px;
+    margin: 20px;
 
     color: var(--section-04-note-color);
     background-color: var(--section-04-note-background-color);
@@ -99,8 +99,8 @@
     position: absolute;
     top: -15px;
 
-    height: 40px;
-    width: 40px;
+    height: 30px;
+    width: 30px;
     border-radius: 50%;
 
     background-color: var(--section-04-note-seal-color);
@@ -114,18 +114,147 @@
     font-family: 'Libra-Serif-Modern';
     font-style: italic;
     font-weight: 300;
-    font-size: 1.7rem;
-    letter-spacing: 2px;
-    word-spacing: 4px;
+    font-size: 1.2rem;
+    letter-spacing: 1px;
+    word-spacing: 2px;
 }
 
 .section-04-note-item p
 {
     font-family: 'Montserrat';
     font-weight: 400;
-    font-size: 1.3rem;
+    font-size: 0.8rem;
 
-    letter-spacing: 2px;
-    line-height: 40px;
-    word-spacing: 4px;
+    letter-spacing: 1px;
+    line-height: 20px;
+    word-spacing: 2px;
+}
+
+@media (min-height: 768px) and (min-width: 1024px)
+{
+    .section-04-note-container
+    {
+        flex-wrap: wrap;
+        align-items: flex-start;
+        justify-content: space-evenly;
+
+        overflow-x: none;
+    }
+}
+@media (min-width: 640px) 
+{
+    .section-04-text-box h2
+    {
+        margin-bottom: 20px;
+        
+        font-family: 'Libra-Serif-Modern';
+        font-style: italic;
+        font-weight: 300;
+        font-size: 1.8rem;
+        letter-spacing: 2px;
+        word-spacing: 4px;
+    }
+    
+    .section-04-text-box p
+    {
+        width: 75%;
+    
+        font-family: 'Montserrat';
+        font-weight: 400;
+        font-size: 1.3rem;
+        letter-spacing: 2px;
+        word-spacing: 4px;
+    }
+    
+    .section-04-note-item
+    {
+        height: 330px;
+        width: 330px;
+        padding: 40px 20px;
+        margin: 20px;
+    }
+    
+    .section-04-note-item div
+    {
+        top: -15px;
+    
+        height: 40px;
+        width: 40px;
+    }
+    
+    .section-04-note-item h3
+    {
+        margin-bottom: 20px;
+        font-size: 1.7rem;
+        letter-spacing: 2px;
+        word-spacing: 4px;
+    }
+    
+    .section-04-note-item p
+    {
+        font-size: 1.3rem;
+    
+        letter-spacing: 2px;
+        line-height: 40px;
+        word-spacing: 4px;
+    }
+}
+
+@media (min-width: 1536px) 
+{
+    .section-04-text-box h2
+    {
+        margin-bottom: 20px;
+        
+        font-family: 'Libra-Serif-Modern';
+        font-style: italic;
+        font-weight: 300;
+        font-size: 1.8rem;
+        letter-spacing: 2px;
+        word-spacing: 4px;
+    }
+    
+    .section-04-text-box p
+    {
+        width: 75%;
+    
+        font-family: 'Montserrat';
+        font-weight: 400;
+        font-size: 1.3rem;
+        letter-spacing: 2px;
+        word-spacing: 4px;
+    }
+    
+    .section-04-note-item
+    {
+        height: 330px;
+        width: 330px;
+        padding: 40px 20px;
+        margin: 20px;
+    }
+    
+    .section-04-note-item div
+    {
+        top: -15px;
+    
+        height: 40px;
+        width: 40px;
+    }
+    
+    .section-04-note-item h3
+    {
+        margin-bottom: 20px;
+        font-size: 1.7rem;
+        letter-spacing: 2px;
+        word-spacing: 4px;
+    }
+    
+    .section-04-note-item p
+    {
+        font-size: 1.3rem;
+    
+        letter-spacing: 2px;
+        line-height: 40px;
+        word-spacing: 4px;
+    }
 }
