--- a/views/home.html
+++ b/views/home.html
@@ -55,9 +55,9 @@
 				<source src="" type="video/mp4">
 			</video>
 	
-			<div class="section-01-container">
-				<p class="section-01-first-paragraph">“A casa do presente, que pensa no futuro e recorda do passado”</p>
-				<p class="section-01-second-paragraph">Nossa proposta é através da empatia cuidar do presente, valorizar a história e as memórias, e respeitar as futuras gerações.</p>
+			<div class="section-01-text-box">
+				<h2 class="h2">“A casa do presente, que pensa no futuro e recorda do passado”</h2>
+				<p class="p">Nossa proposta é através da empatia cuidar do presente, valorizar a história e as memórias, e respeitar as futuras gerações.</p>
 				<a class="section-01-button">Conheça nossos projetos</a>
 			</div>
 		</div>
@@ -68,7 +68,7 @@
 		<div class="section-02-content-wrapper">
 
 			<div class="section-02-title-container">
-				<h2>“A casa do presente, que pensa no futuro e recorda do passado”</h2>
+				<h2 class="h2">“A casa do presente, que pensa no futuro e recorda do passado”</h2>
 			</div>
 
 			<div class="section-02-detail-container">
@@ -79,19 +79,19 @@
 					</div>
 
 					<div class="section-02-card">
-						<h3>Natasha M. Yamamoto</h3>
+						<h3 class="h3">Natasha M. Yamamoto</h3>
 						<img src="../images/character_Natasha.jpg" alt="Natasha Michiko">
 					</div>
 					
 					<div class="section-02-card">
 						<img src="../images/character_Hugo.jpg" alt="Hugo Wegner">
-						<h3>Hugo W. de Moura Nessler</h3>
+						<h3 class="h3">Hugo W. de Moura Nessler</h3>
 					</div>
 				</div>
 			
 				<div class="section-02-text-box">
-					<h3>Nossa essência</h3>
-					<p>Nascida de um propósito de vida, a Yamamoto Haus acredita no poder do ambiente em influenciar nossa saúde, bem-estar e comportamento e em como a natureza é uma grande influência nesse processo.  Visto isso, nosso escritório deseja oferecer através do design biofílico, soluções inteligentes que promovam uma experiência única e alinhada com a essência de cada indivíduo e tornar da casa um local que promova saúde, conforto ambiental e bem-estar, através da sustentabilidade e tecnologia. </p>       
+					<h3 class="h3">Nossa essência</h3>
+					<p class="p">Nascida de um propósito de vida, a Yamamoto Haus acredita no poder do ambiente em influenciar nossa saúde, bem-estar e comportamento e em como a natureza é uma grande influência nesse processo.  Visto isso, nosso escritório deseja oferecer através do design biofílico, soluções inteligentes que promovam uma experiência única e alinhada com a essência de cada indivíduo e tornar da casa um local que promova saúde, conforto ambiental e bem-estar, através da sustentabilidade e tecnologia.</p>       
 				</div>
 			</div>
 
@@ -107,22 +107,22 @@
 			</div>
 
 			<div class="section-03-text-box">
-				<h2 class="section-03-text-box-title">Nossos valores...</h2>
+				<h2 class="h2">Nossos valores...</h2>
 				<div class="section-03-text-box-item">
-					<h3>Empatia, cuidado e consideração - <span>omoiyari.</span></h3>
-					<p>Cuidar do presente, das pessoas e de sí mesmo, preservar a vida, criar conexões, valorizar as origens e respeitar as futuras gerações.</p>
+					<h3 class="h3">Empatia, cuidado e consideração - <span>omoiyari.</span></h3>
+					<p class="p">Cuidar do presente, das pessoas e de sí mesmo, preservar a vida, criar conexões, valorizar as origens e respeitar as futuras gerações.</p>
 				</div>
 				<div class="section-03-text-box-item">
-					<h3>Emendar com ouro - <span>kintsugi.</span></h3>
-					<p>Errar é humano. Nossa missão é ressignificar o erro em aprendizado, permitindo a evolução contínua como pessoas e profissionais.</p>
+					<h3 class="h3">Emendar com ouro - <span>kintsugi.</span></h3>
+					<p class="p">Errar é humano. Nossa missão é ressignificar o erro em aprendizado, permitindo a evolução contínua como pessoas e profissionais.</p>
 				</div>
 				<div class="section-03-text-box-item">
-					<h3>Gratidão - <span>kansha.</span></h3>
-					<p>Pelas pessoas, pelas oportunidades, pelo trabalho, pela natureza e pela vida.</p>
+					<h3 class="h3">Gratidão - <span>kansha.</span></h3>
+					<p class="p">Pelas pessoas, pelas oportunidades, pelo trabalho, pela natureza e pela vida.</p>
 				</div>
 				<div class="section-03-text-box-item">
-					<h3>Faça o melhor que puder e nunca desista - <span>ganbatte.</span></h3>
-					<p>Seja como o bambu, flexível, e sustente-se nas suas raízes nos momentos de adversidade, e assim como o bambu nas estações chuvosas, cresça (progrida e evolua) em direção ao céu.</p>
+					<h3 class="h3">Faça o melhor que puder e nunca desista - <span>ganbatte.</span></h3>
+					<p class="p">Seja como o bambu, flexível, e sustente-se nas suas raízes nos momentos de adversidade, e assim como o bambu nas estações chuvosas, cresça (progrida e evolua) em direção ao céu.</p>
 				</div>
 			</div>
 
@@ -144,30 +144,30 @@
 		<div class="section-04-content-wrapper">
 
 			<div class="section-04-text-box">
-				<h2>Nossos serviços...</h2>
-				<p>Todos nossos serviços procuram se alinhar com a sua real necessidade de projeto, unindo funcionalidade + estética e claro,<span> você</span>, a chave principal do projeto!</p>
+				<h2 class="h2">Nossos serviços...</h2>
+				<p class="p">Todos nossos serviços procuram se alinhar com a sua real necessidade de projeto, unindo funcionalidade + estética e claro,<span> você</span>, a chave principal do projeto!</p>
 			</div>
 
 			<div class="section-04-note-container">
 				<div class="section-04-note-item">
 					<div></div>
-					<h3>Reviva Ambientes!</h3>
-					<p>Revitalizar o espaço sem quebra-quebra entregando um ambiente novo e aconchegante.</p>
+					<h3 class="h3">Reviva Ambientes!</h3>
+					<p class="p">Revitalizar o espaço sem quebra-quebra entregando um ambiente novo e aconchegante.</p>
 				</div>
 				<div class="section-04-note-item">
 					<div></div>
-					<h3>Reforma</h3>
-					<p>Reforma de tudo que for necessário e o que o ambiente permitir.</p>
+					<h3 class="h3">Reforma</h3>
+					<p class="p">Reforma de tudo que for necessário e o que o ambiente permitir.</p>
 				</div>
 				<div class="section-04-note-item">
 					<div></div>
-					<h3>Prelúdio</h3>
-					<p>Apartamento na planta ou em construção. Decoração com liberdade e economia!</p>
+					<h3 class="h3">Prelúdio</h3>
+					<p class="p">Apartamento na planta ou em construção. Decoração com liberdade e economia!</p>
 				</div>
 				<div class="section-04-note-item">
 					<div></div>
-					<h3>Consultoria</h3>
-					<p>Recomendações rápidas e práticas, aproveitando o que já existe.</p>
+					<h3 class="h3">Consultoria</h3>
+					<p class="p">Recomendações rápidas e práticas, aproveitando o que já existe.</p>
 				</div>
 			</div>
 
