--- a/css/section.2.style.css
+++ b/css/section.2.style.css
@@ -28,19 +28,14 @@
     justify-content: center;
     align-items: center;
 
-    height: 40%;
+    height: 10%;
     width: 100%;
 }
 
 .section-02-title-container h2
 {
-    font-family: 'Libra-Serif-Modern';
-    font-weight: 200;
-    font-size: 1.2rem;
-
     color: var(--section-02-title-color);
     text-align: center;
-    letter-spacing: 2px;    
 }
 
 /*----------------- Card and Text ---------------------------*/
@@ -50,7 +45,7 @@
     display: flex;
     flex-direction: column;
 
-    height: 100%;
+    height: 90%;
     width: 100%;
 }
 
@@ -61,7 +56,6 @@
     flex-direction: row;
     justify-content: center;
 
-    height: 50%;
     width: 100%;
 }
 
@@ -82,16 +76,8 @@
 
 .section-02-card h3
 {   
-    margin: 10px 0px 0px 10px;
-
-    font-family: 'Libra-Serif-Modern';
-    font-weight: 200;
     font-style: italic;
-    font-size: 1rem;
-    
     color: var(--section-02-character-name-color);
-    letter-spacing: 2px;
-
     text-align: start;
 }
 
@@ -112,9 +98,9 @@
 {
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: flex-start;
 
-    height: 100%;
     width: 100%;
 
     background-image: url(/images/lua_nova.png);
@@ -127,54 +113,31 @@
 .section-02-text-box h3 
 {
     width: 100%;
-    padding: 0px 10px;
+    padding: 0px 20px;
     margin-bottom: 5px;
 
-    font-family: 'Libra-Serif-Modern';
-    font-weight: 300;
     font-style: italic;
-    font-size: 1.2rem;
-
     color: var(--section-02-text-title-color);
-    letter-spacing: 3px;
 }
 
 .section-02-text-box p
 {
     width: 100%;
-    padding: 10px;
-
-    font-family: 'Montserrat';
-    font-weight: 400;
-    font-size: 0.9rem;
-
+    padding: 0px 20px;
     color: var(--section-02-text-color);
-
     line-height: 18px;
 }
 
 @media (min-width: 640px) 
-{
-    .section-02-title-container h2
-    {
-        font-size: 1.3rem;  
-    }
-
+{   
     .section-02-card img 
     {
-        height: 180px;
-        width: 180px;
+        height: 150px;
+        width: 150px;
     }
-
-    .section-02-text-box h3 
-    {
-        font-size: 1.3rem;
-    }
-    
+   
     .section-02-text-box p
     {
-        font-size: 1rem;
-        letter-spacing: 1px;
         line-height: 20px;
     }
 }
@@ -182,50 +145,32 @@
 /* Responsive design for screens equal or larger than 768px */
 @media (min-width: 768px) 
 {
-    .section-02-title-container h2
-    {
-        font-size: 1.4rem;  
-    }
-
     .section-02-card img 
     {
         height: 220px;
         width: 220px;
     }
-
-    .section-02-text-box h3 
-    {
-        font-size: 1.4rem;
-    }
-    
-    .section-02-text-box p
-    {
-        font-size: 1.1rem;
-    }
-
 }
 
 /* Responsive design for screens equal or larger than 1024px */
 @media (min-width: 1024px) 
 {
-    .section-02-title-container h2
-    {
-        font-size: 1.5rem;  
-    }
 
-    .section-02-card-container
+    .section-02-title-container
     {
-        height: 100%;
+        height: 20%;
     }
 
     .section-02-detail-container
     {
         flex-direction: row;
+        height: 80%;
     }
 
     .section-02-card-container
     {
-        width: 80%;
+        height: 100%;
+        width: 60%;
     }
 
     .section-02-card:nth-child(1)
@@ -254,57 +199,69 @@
         box-shadow: 15px 15px 0px 0px #4e6982;
     }
 
+    .section-02-text-box
+    {   
+        height: 100%;
+        width: 40%;
+    }
+
     .section-02-text-box h3 
     {
-        width: 90%;
-        padding: 0px 0px 0px 15px;
         margin-bottom: 10px;
-        font-size: 1.5rem;
-        letter-spacing: 3px;
+    }
+}
+
+@media (min-width: 1280px)
+{
+    .section-02-card-container
+    {
+        width: 50%;
+    }
+
+    .section-02-text-box
+    {   
+        width: 50%;
+    }
+
+    .section-02-text-box h3 
+    {
+        padding: 0px 40px 0px 0px;
+        margin-bottom: 15px;
     }
     
     .section-02-text-box p
     {
-        width: 90%;
-        padding: 0px 0px 0px 15px;
-        font-size: 1.2rem;
-        word-spacing: 2px;
+        padding: 0px 40px 0px 0px;
+        line-height: 35px;
     }
-
 }
 
 /* Responsive design for screens equal or larger than 1536px */
 @media (min-width: 1536px) 
-{
-    .section-02-title-container h2
+{   
+    .section-02-title-container
     {
-        font-size: 1.6rem;  
+        height: 30%;
     }
-    
-    .section-02-card h3
+
+    .section-02-detail-container
+    {
+        height: 70%;
+    }
+
+    .section-02-card-container
+    {
+        width: 45%;
+    }
+
+    .section-02-text-box
     {   
-        font-size: 1.4rem;
+        width: 55%;
     }
-    
 
     .section-02-card img 
     {
         height: 400px;
         width: 300px;
-    }
-
-    .section-02-text-box h3 
-    {
-        padding: 0px;
-        margin-bottom: 15px;
-        font-size: 1.6rem;
-    }
-    
-    .section-02-text-box p
-    {
-        padding: 0px;
-        font-size: 1.3rem;
-        word-spacing: 4px;
-        line-height: 35px;
     }
 }
