--- a/views/home.html
+++ b/views/home.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="/css/section.2.style.css">
 	<link rel="stylesheet" href="/css/section.3.style.css">
 	<link rel="stylesheet" href="/css/section.4.style.css">
+	<link rel="stylesheet" href="/css/section.5.style.css">
 </head>
 
 <body>
@@ -171,6 +172,31 @@
 				</div>
 			</div>
 
+		</div>
+	</section>
+
+	<!-- Section 05 -->
+	<section class="section">
+		<div class="section-05-content-wrapper">
+			<div class="section-05-title">
+				<h2 class="h2">Projetos desenvolvidos...</h2>
+			</div>
+			<div class="section-05-image-container">
+				<div class="section-05-image-col">
+					<img class="section-05-gallery-02" src="" alt="">
+					<div class="section-05-image-row">
+						<img class="section-05-gallery-03" src="" alt="">
+						<img class="section-05-gallery-04" src="" alt="">
+					</div>
+				</div>
+				<div class="section-05-image-col">
+					<img class="section-05-gallery-01" src="" alt="">
+				</div>
+
+				<div class="section-05-image-col">
+					<img class="section-05-gallery-05" src="" alt="">
+				</div>
+			</div>
 		</div>
 	</section>
 
