--- a/views/home.html
+++ b/views/home.html
@@ -182,21 +182,35 @@
 				<h2 class="h2">Projetos desenvolvidos...</h2>
 			</div>
 			<div class="section-05-image-container">
-				<div class="section-05-image-col">
-					<img class="section-05-gallery-02" src="" alt="">
-					<div class="section-05-image-row">
-						<img class="section-05-gallery-03" src="" alt="">
-						<img class="section-05-gallery-04" src="" alt="">
+				<div class="section-05-image-row">
+
+					<div class="section-05-box-medium">
+						<img src="../images/gallery/1.jpg" alt="">
 					</div>
-				</div>
-				<div class="section-05-image-col">
-					<img class="section-05-gallery-01" src="" alt="">
+
+					<div class="section-05-box-small"></div>
+
+					<div class="section-05-box-large">
+						<img src="../images/gallery/2.jpg" alt="">
+					</div>
+
 				</div>
 
-				<div class="section-05-image-col">
-					<img class="section-05-gallery-05" src="" alt="">
+				<div class="section-05-image-row">
+
+					<div class="section-05-box-large">
+						<img src="../images/gallery/5.jpg" alt="">
+					</div>
+
+					<div class="section-05-box-small">
+						<img src="../images/gallery/4.jpg" alt="">
+					</div>
+
+					<div class="section-05-box-medium"></div>
+
 				</div>
 			</div>
+			<a class="section-05-button">Quero meu projeto!</a>
 		</div>
 	</section>
 
