--- a/css/home.style.css
+++ b/css/home.style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 @font-face {
     font-family: 'Libra-Serif-Modern';
     src: url(/fonts/LibraSerifModern-Regular.otf) format('opentype');
@@ -22,7 +23,7 @@ body {
     width: 0.000001px;
 } */
 
-.section {
+.sections {
     height: calc(100vh - 70px);
 }
 
@@ -44,23 +45,23 @@ body {
     font-weight: 400;
 }
 
-@media(min-width: 480px) {
+@media(min-width: 480px) and (min-height: 320px) {
     .h2 {
         font-size: 1.2rem;
     }
-    
+
     .h3 {
         font-size: 1.1rem;
     }
-    
+
     .p {
         font-size: 0.9rem;
     }
 }
 
 /* Responsive design for screens equal or larger than 640px */
-@media (min-width: 640px) {
-    .section {
+@media (min-width: 640px) and (min-height: 360px) {
+    .sections {
         height: calc(100vh - 120px);
     }
 
@@ -68,12 +69,12 @@ body {
         font-size: 1.3rem;
         letter-spacing: 1px;
     }
-    
+
     .h3 {
         font-size: 1.2rem;
         letter-spacing: 1px;
     }
-    
+
     .p {
         font-size: 1rem;
         letter-spacing: 1px;
@@ -81,21 +82,21 @@ body {
 }
 
 /* Responsive design for screens equal or larger than 768px */
-@media (min-width: 768px) and (min-height: 480px)  {
-    .section {
+@media (min-width: 768px) and (min-height: 480px) {
+    .sections {
         height: calc(100vh - 90px);
     }
-    
+
     .h2 {
         font-size: 1.5rem;
         word-spacing: 2px;
     }
-    
+
     .h3 {
         font-size: 1.4rem;
         word-spacing: 2px;
     }
-    
+
     .p {
         font-size: 1.1rem;
         word-spacing: 2px;
@@ -104,53 +105,53 @@ body {
 
 /* Responsive design for screens equal or larger than 1024px */
 @media (min-width: 1024px) and (min-height: 640px) {
-    .section {
+    .sections {
         height: calc(100vh - 150px);
     }
 
     .h2 {
         letter-spacing: 2px;
     }
-    
+
     .h3 {
         letter-spacing: 2px;
     }
-    
+
     .p {
         letter-spacing: 2px;
     }
 }
 
-@media (min-width: 1280px) and (min-height: 640px) {
+@media (min-width: 1280px) and (min-height: 768px) {
     .h2 {
         font-size: 1.6rem;
     }
-    
+
     .h3 {
         font-size: 1.5rem;
     }
-    
+
     .p {
         font-size: 1.2rem;
     }
 }
 
 /* Responsive design for screens equal or larger than 1536px */
-@media (min-width: 1536px) and (min-height: 768px) {
-    .section {
+@media (min-width: 1536px) and (min-height: 1024px) {
+    .sections {
         height: calc(100vh - 180px);
     }
-            
+
     .h2 {
         font-size: 1.8rem;
         word-spacing: 4px;
     }
-    
+
     .h3 {
         font-size: 1.7rem;
         word-spacing: 4px;
     }
-    
+
     .p {
         font-size: 1.2rem;
         word-spacing: 4px;
